fixed contact form spacing and underline of Insta icon

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,9 @@
         text-align: center;
         padding: 60px 30px 30px 30px;
    }
+.form-control {
+   margin: 30px 0;
+}
 .landingfiller {
         width:100%;
         height:100vh;
@@ -69,6 +72,7 @@
    }
 .s-m a:hover {
         color: blue;
+        text-decoration: none;
    }
 .s-m a i {
         transition: 0.2s all;
